Kubernetes_Server/Template/Devops/monitor/Zabbix/zabbix-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-web-service
  namespace: zabbix
  labels:
    app: zabbix-web-service
spec:
  selector:
    app: zabbix-web-service
  ports:
  - name: web
    port: 8080
    protocol: TCP
