Kubernetes_Server/Template/Devops/monitor/Zabbix/zabbix-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zabbix-web-ingress
  namespace: zabbix
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: zabbix.erge.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zabbix-web-service
            port: 
             number: 8080
